# AndroidNdkBinderExamples

./: README.md  build.gradle  settings.gradle
Common/: .gitignore  build.gradle
Common/aidl/com/example/: IMyService.aidl
Common/java/com/example/: ComplexType.java  Constants.java
Common/src/main/: AndroidManifest.xml
Common/src/main/aidl/com/example/: ComplexType.aidl  IMyService.aidl
Common/src/main/cpp/includes/: ComplexType.h
Common/src/main/java/com/example/: ComplexType.java
JavaBinderClient/: build.gradle
JavaBinderClient/src/main/: AndroidManifest.xml
JavaBinderClient/src/main/java/com/example/javabinderclient/: MainActivity.java
JavaBinderClient/src/main/res/layout/: activity_main.xml
JavaBinderClient/src/main/res/values/: strings.xml
JavaBinderService/: build.gradle
JavaBinderService/src/main/: AndroidManifest.xml
JavaBinderService/src/main/java/com/example/javabinderservice/: MyService.java
JavaBinderService/src/main/res/values/: strings.xml
NdkBinderClient/: build.gradle
NdkBinderClient/src/main/: AndroidManifest.xml
NdkBinderClient/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NdkBinderClient/src/main/res/values/: strings.xml
NdkBinderService/: build.gradle
NdkBinderService/src/main/: AndroidManifest.xml
NdkBinderService/src/main/cpp/: CMakeLists.txt  MyService.cpp  MyService.h  native-lib.cpp
NdkBinderService/src/main/cpp/includes/: ComplexType.h  LogDefs.h  MyService.h
NdkBinderService/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
